<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ImgLayout</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!--
    <string name="tests">ТЕСТЫ</string>
    <string name="trainings">ТРЕНИНГИ</string>
    <string name="status">СТАТУС</string>
    <string name="todos">ВСЕ О ЗРЕНИИ</string>
    -->

    <drawable name="color_white">#fff</drawable>

    <string name="Carrot">Carrot</string>
    <string name="DidYouKnow">Did You Know</string>
    <string name="Vitamins">Rich In Vitamins</string>
    <string name="PreventsFrom">Prevents from</string>
    <string name="cataract">cataract</string>
    <string name="dryEye">dry eye</string>
    <string name="macularDeg">macular deg</string>

</resources>